app/styles/modules/_m-layer-palette.scss
// --------------------------------------------------
// Module: Layer Palette
// --------------------------------------------------

$layer-palette-padding: rem-calc(6);
$layer-palette-hover-color: rgba($dark-gray,0.08);

.layer-palette {
  // contains the .layers-menu and button to show/hide on mobile
  padding: $layer-palette-padding;
  font-size: $small-font-size;
}

#layers-menu {
  // the element that shows/hides on mobile
  margin: $layer-palette-padding*-1 $layer-palette-padding*-1 0;

  ul {
    margin-left: 0;
    list-style: none;
  }

  input {
    margin-bottom: 0;
  }
}

.layer-palette-accordion {
  border-bottom: 1px solid $medium-gray;

  &:hover {
    background-color: $layer-palette-hover-color;
  }
}

.layer-palette-accordion-title {
  position: relative;
  margin: 0;
  padding: $layer-palette-padding;
  padding-right: calc(#{$accordionmenu-arrow-size*2} + #{$layer-palette-padding*2});
  cursor: pointer;

  &:hover {
    background-color: $layer-palette-hover-color;
    cursor: pointer;
    user-select: none;
  }

  &::after {
    @include css-triangle($accordionmenu-arrow-size, $accordionmenu-arrow-color, up);
    position: absolute;
    top: 50%;
    margin-top: -1 * ($accordionmenu-arrow-size / 2);
    #{$global-right}: $layer-palette-padding;
  }
  &.closed::after {
    @include css-triangle($accordionmenu-arrow-size, $accordionmenu-arrow-color, down);
  }
}

.layers-collection {
  margin: 0;

  .switch {
    margin: 0 $layer-palette-padding 0 0;
  }
}

.layer-menu-item {
  padding: $layer-palette-padding;
  border-top: 1px solid $white;

  &:hover {
    cursor: pointer;
    background-color: $layer-palette-hover-color;
  }

}

.layer-menu-item-controls {

  label {
    padding: 0 $layer-palette-padding;
    font-size: inherit;
    line-height: inherit;

    &:hover {
      cursor: pointer;
      background-color: $layer-palette-hover-color;
    }
  }

  .nested {
    label {
      padding-left: $layer-palette-padding*3;
    }
  }
}

.layer-warning {
  float: right;
  margin: 0 0 0 $layer-palette-padding;
  position: relative;

  .fa {
    color: $dcp-yellow;
  }

  .layer-warning--text {
    display: none;
  }

  &:hover .layer-warning--text {
    display: block;
    position: absolute;
    z-index: 2;
    top: 50%;
    right: 50%;
    background-color: $white;
    padding: $layer-palette-padding;
    border: 1px solid $dcp-yellow;
    white-space: nowrap;
  }
}

// TODO: There are flex clases built into Foundation for this purpose.
.flex-reverse {
  display: flex;
  flex-direction: column-reverse;
}

